# futscrapp

./: CMakeLists.txt  Main.cpp  README.md
futscrapplib/: CMakeLists.txt
futscrapplib/include/futscrapplib/: Bank.h  Club.h  Common.h  League.h  Table.h
futscrapplib/src/: Bank.cpp  Club.cpp  Common.cpp  League.cpp  Table.cpp
futscrapplib/test/: CMakeLists.txt
res/: futmondo_pressroom_130817_1425.html  futmondo_pressroom_180817_0134.html  futmondo_pressroom_190817_0125.html  futmondo_pressroom_230817_0125.html  futmondo_pressroom_august.html  futmondo_pressroom_september.html
res/W1/: TeamOfTheWeek.html  TeamPos1.html  TeamPos2.html  TeamPos3.html  TeamPos4.html  TeamPos5.html  TeamPos6.html  TeamPos7.html  TeamPos8.html  TeamPos9.html
res/W2/: TeamOfTheWeek.html  TeamPos1.html  TeamPos2.html  TeamPos3.html  TeamPos4.html  TeamPos5.html  TeamPos6.html  TeamPos7.html  TeamPos8.html  TeamPos9.html
src/: Main.cpp
